# ray-tracing

./: CMakeLists.txt  README.md  main.cpp
Geometry3d/: Geometry3d.h  Intersection.cpp  Intersection.h  Parallelogram.cpp  Parallelogram.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h
MultiThreading/: MultiThreading.h  SyncQueue.cpp  ThreadPool.cpp
MyGL/: Color.cpp  KDTree.cpp  MyGL.h  Scene.cpp
MyGL/Examples/: Examples.hpp  monster.stl  xBowl.stl
MyGL/Readers/: ReadSTL.cpp  ReadSTL.h
